name:                adventofcode
version:             0.1.0.0
synopsis:            Haskell solutions for the Advent of Code game
description:         
homepage:            http://github.com/patrickmn/adventofcode-haskell/
license:             BSD3
license-file:        LICENSE
author:              Patrick Mylund Nielsen
maintainer:          haskell@patrickmn.com
copyright:           2015 Patrick Mylund Nielsen
category:            General
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     AdventofCode.Year2015.Day01
                       AdventofCode.Year2015.Day02
                       AdventofCode.Year2015.Day03
                       AdventofCode.Year2015.Day04
                       AdventofCode.Year2015.Day05
                       AdventofCode.Year2015.Day06
                       AdventofCode.Year2015.Day07
                       AdventofCode.Year2015.Day08
                       AdventofCode.Year2015.Day09
                       AdventofCode.Year2015.Day10
                       AdventofCode.Year2015.Day11
                       AdventofCode.Year2015.Day12
                       AdventofCode.Year2015.Day13
                       AdventofCode.Year2015.Day14
                       AdventofCode.Year2015.Day15
                       AdventofCode.Year2015.Day16
                       AdventofCode.Year2015.Day17
                       AdventofCode.Year2015.Day18
                       AdventofCode.Year2015.Day19
                       AdventofCode.Year2015.Day20
                       AdventofCode.Year2015.Day21
                       AdventofCode.Year2015.Day22
                       AdventofCode.Year2015.Day23
                       AdventofCode.Year2015.Day24
                       AdventofCode.Year2015.Day25
                       AdventofCode.Year2016.Day01
                       AdventofCode.Year2016.Day02
                       AdventofCode.Year2016.Day03
                       AdventofCode.Year2016.Day04
                       AdventofCode.Year2016.Day05
                       AdventofCode.Year2016.Day06
                       AdventofCode.Year2016.Day07
                       AdventofCode.Year2016.Day08
                       AdventofCode.Year2016.Day09
                       AdventofCode.Year2016.Day10
                       AdventofCode.Year2016.Day11
                       AdventofCode.Year2016.Day12
                       AdventofCode.Year2016.Day13
                       AdventofCode.Year2016.Day14
                       AdventofCode.Year2016.Day15
                       AdventofCode.Year2016.Day16
                       AdventofCode.Year2016.Day17
                       AdventofCode.Year2016.Day18
                       AdventofCode.Year2016.Day19
                       AdventofCode.Year2016.Day20
                       AdventofCode.Year2016.Day21
                       AdventofCode.Year2016.Day22
                       AdventofCode.Year2016.Day23
                       AdventofCode.Year2016.Day24
                       AdventofCode.Year2016.Day25
                       AdventofCode.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , classy-prelude
                     , containers
                     , cryptohash
                     , memoize
                     , scientific
                     , split
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable adventofcode
  hs-source-dirs:      bin
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode
                     , bytestring
                     , classy-prelude
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Util
                       Year2015
                       Year2016
  build-depends:       base
                     , adventofcode
                     , bytestring
                     , classy-prelude
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/patrickmn/adventofcode-haskell.git
